tests/baselines/reference/ES5For-of26.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of26.ts(1,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of26.ts (1 errors) ====
    for (var [a = 0, b = 1] of [2, 3]) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        a;
        b;
    }